--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.86.2",
+    "@tiptap/extension-image": "^3.12.1",
+    "@tiptap/extension-link": "^3.12.1",
+    "@tiptap/extension-table": "^3.12.1",
+    "@tiptap/extension-table-cell": "^3.12.1",
+    "@tiptap/extension-table-header": "^3.12.1",
+    "@tiptap/extension-table-row": "^3.12.1",
+    "@tiptap/react": "^3.12.1",
+    "@tiptap/starter-kit": "^3.12.1",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
